--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 * {
   box-sizing: border-box;
 }
@@ -8,7 +6,7 @@
   --primary-color: dodgerblue;
   --select-color: dodgerblue;
   --success: rgb(15, 158, 2);
-  --danger: rgb(214, 23, 23); 
+  --danger: rgb(214, 23, 23);
 }
 
 body {
@@ -22,7 +20,6 @@ body {
   align-items: center;
 }
 
-
 .game-container {
   border: 1px solid black;
   box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.5);
@@ -34,7 +31,7 @@ body {
 }
 
 .header {
-  background:var(--primary-color);
+  background: var(--primary-color);
   padding: 1px 16px;
   color: white;
   height: 100px;
@@ -42,9 +39,12 @@ body {
   font-size: 24px;
   text-shadow: 1px 2px 2px black;
   text-align: center;
- justify-content: center;
+  justify-content: center;
+}
 
-} 
+.header h1{
+  font-size: 45px;
+}
 
 /* Splash Page */
 input[type="radio"] {
@@ -59,7 +59,7 @@ input[type="radio"] {
 
 .selection-container {
   position: relative;
-} 
+}
 
 .radio-container {
   width: 90%;
@@ -72,8 +72,8 @@ input[type="radio"] {
 
 label {
   position: relative;
-  top: 20px;
-  left: 20px;
+  top: 10px;
+  left: 12px;
   font-size: 30px;
 }
 
@@ -85,29 +85,26 @@ label {
 .best-score {
   position: relative;
   top: -110px;
-  left: 300px;
+  left: 285px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.best-score span {
-  margin: 0;
+.best-score-value {
+  margin-left: 15px;
 }
 
 .best-score span:last-child {
   font-size: 24px;
 }
 
-
-.selected-label {
-  background: var(--select-color);
-  color: white;
-}
-
 h1 {
-  margin-top: 15px;
+  margin-top: 17px;
 }
 
 .card {
-padding: 13px;
+  padding: 13px;
 }
 
 .radio-container {
@@ -118,31 +115,32 @@ padding: 13px;
   justify-content: space-between;
 }
 
-
-span best-score {
-  /* justify-content: space-between; */
-  display: flex;
-}
-
 .selection-footer {
   position: absolute;
   background: black;
-  width: 98px;
-  height: 53px;
+  width: 100%;
+  left: 0;
+  height: 73px;
   bottom: 0;
   z-index: 4;
+  text-align: center;
 }
 
 button {
   bottom: 0;
-  width: 50%;
+  width: 95%;
+  height: 43px;
+  border-radius: 5px;
+  margin-top: 16px;
+  /* align-items: center; */
+  background: var(--primary-color);
+  color: white;
 }
 
 .item-container {
   height: 552px;
   overflow-y: scroll;
   position: relative;
-  /* margin-left: 12px; */
   top: -4px;
   -ms-overflow-style: none;
 }
@@ -158,6 +156,20 @@ button {
   height: 70px;
   margin: 0 23px;
   user-select: none;
+}
+
+.finished > h1 {
+  opacity: 0.5;
+}
+
+.selected-item {
+  background: var(--select-color);
+  position: fixed;
+  top: 322px;
+  z-index: -1;
+  margin-left: -13px;
+  width: 498px;
+  height: 80px;
 }
 
 .item-footer {
@@ -176,7 +188,57 @@ button {
   height: 75%;
   width: 34%;
   margin: 12px;
-  border-radius: 2px;
-  /* border: 1px 2px 2px black;  */
+  border-radius: 23px;
+  border: none;
 }
 
+button:hover {
+  filter: brightness(100%);
+}
+
+.wrong {
+  background: red;
+}
+
+.right {
+  background: green;
+}
+
+#countdown-page {
+  text-align: center;
+  margin-top: 44%;
+  font-size: 40px;
+}
+
+
+/* score page */
+#score-page{
+  text-align: center;
+}
+
+.score-footer {
+  margin-top: 55px;
+}
+
+.base-time{
+  margin-top: 123px;
+}
+
+.penalty-time {
+  margin-top: 22px;
+  color: rgb(186, 14, 14);
+}
+
+.title {
+  margin-top: 72px;
+}
+
+.final-time {
+  font-size: 73px;
+  color: green;
+
+}
+
+.score-container h1 {
+  letter-spacing: 1px;
+}
